# pluxx

./: .travis.yml  AUTHORS  CMakeLists.txt  Makefile.am  ProjectHome.md  README  configure.ac  pluxx-uninstalled.pc.in
debian/: changelog  control  copyright  libpluxx-dev.install
include/: Makefile.am
include/pluxx/: Makefile.am  PluginExceptions.h  PluginLoader.h
src/: Makefile.am  PluginExceptions.cpp  PluginLoader.cpp  stringUtil.h
test/modules/: Makefile.am
test/modules/testplugin1/: PluginTest1.cpp
test/modules/testplugin2/: Makefile.am  PluginTest2.cpp
trunk/: CMakeLists.txt  Makefile.am  README  pluxx.pc.in
trunk/include/pluxx/: Plugin.h  PluginExceptions.h
trunk/src/: Makefile.am
trunk/test/: Makefile.am
trunk/test/modules/testplugin1/: Makefile.am  PluginTest1.cpp
